# bc-depo-rust

./: Cargo.toml  README.md
src/: db_depo.rs  depo_impl.rs  function.rs  lib.rs  log.rs  main.rs  mem_depo.rs  record.rs  recovery_continuation.rs  server.rs  user.rs
tests/: request_test.rs  server_test.rs
