[package]
name = "depo"
version = "0.11.0"
edition = "2024"
description = "Server for secure and anonymous storage and retrieval of binary objects."
authors = ["Blockchain Commons"]
repository = "https://github.com/BlockchainCommons/bc-depo-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
documentation = "https://docs.rs/depo"
keywords = [
    "cryptocurrency",
    "security",
    "key-management",
    "recovery",
    "server",
] # Up to five
categories = [
    "cryptography",
    "database",
    "web-programming::http-server",
] # https://crates.io/category_slugs

[dependencies]
dcbor = { version = "^0.20.0", features = ["multithreaded"] }
bc-ur = "^0.10.0"
bc-components = "^0.22.0"
bc-envelope = { version = "^0.30.0", features = ["multithreaded"] }
gstp = "^0.8.0"
depo-api = { version = "^0.13.0", features = ["multithreaded"] }
bc-xid = "^0.10.0"

warp = "^0.3.0"
tokio = { version = "^1.0.0", features = ["full"] }
mysql_async = "^0.36.1"
serde = { version = "^1.0.0", features = ["derive"] }
anyhow = "^1.0.0"
hex = "^0.4.3"
async-trait = "^0.1.74"
bytes = "^1.5.0"
url = "^2.4.1"
log = "^0.4.20"
env_logger = "^0.10.1"
nu-ansi-term = "^0.49.0"

[dev-dependencies]
indoc = "^2.0.4"
hex-literal = "^0.4.1"
reqwest = "^0.11.22"
